lisk-dex-electron/src/SignInModal.scss
@import './styles/variables';

#sign-in-modal {
  margin: auto;
  box-sizing: border-box;
  z-index: 200;
  width: 50%;
  padding: 30px;
  background-color: rgb(27, 27, 27);
  height: 75%;
  overflow-y: auto;
  border: 1px solid $primary-bg;

  .button-wrapper {
    position: relative;
    .close-btn {
      position: absolute;
      top: -20px;
      right: -20px;
      font-size: 32px;
    }
  }

  .sign-in-heading {
    margin-top: 0;
  }
}

.sign-in-textarea {
  height: 46px;
  width: 100%;
  font-size: 20px;
  background-color: rgb(36, 35, 35);
  color: white;
  font-family: 'Courier New', Courier, monospace;
  margin-top: 10px;
  margin-bottom: 8px;
}

.sign-in-input {
  height: 30px;
  width: 100%;
  font-size: 20px;
  background-color: rgb(36, 35, 35);
  color: white;
  font-family: 'Courier New', Courier, monospace;
  margin-top: 10px;
  margin-bottom: 8px;
}

.sign-in-progress-area {
  position: absolute;
  top: 10px;
  height: 20px;
  width: 90%;
  left: 5%;
}

@media only screen and (max-width: 950px), only screen and (max-height: 700px) {
  #sign-in-modal {
    padding: 20px;
    border: 0;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }

  .sign-in-textarea {
    height: 70px;
  }
}

